# CrappyLearningEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup-environment.ps1  vcpkg.json
Engine/: CMakeLists.txt
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Launch.cpp
src/Engine/GraphicsAPI/: CMakeLists.txt  GraphicsAPI.h  VulkanWrapper.cpp  VulkanWrapper.h
src/Engine/PlatformLayer/: CMakeLists.txt  GLFWWrapper.cpp  GLFWWrapper.h  PlatformLayer.h
